build using gitenberg.travis

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,5 @@
 _repo: The-Mayflower-and-Her-Log-July-15-1620-May-6-1621-Volume-6_4106
+_version: 0.1.0
 creator:
   author:
     agent_name: Ames, Azel
