--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Mayflower-and-Her-Log-July-15-1620-May-6-1621-Volume-6_4106
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Ames, Azel
@@ -8,6 +11,8 @@ creator:
     gutenberg_agent_id: '1392'
     url: http://www.gutenberg.org/2009/agents/1392
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/4106#The-Mayflower-and-Her-Log-July-15-1620-May-6-1621-Volume-6
 gutenberg_issued: '2003-06-01'
 gutenberg_type: Text
 identifiers:
